maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: '=' expected but '[' found.
def KeepHandOnSideWall()[
                        ^Escaper:13: error: illegal start of simple expression
}
^