maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
}

def KeepHandOnSideWall()[
  if (!estFaceMur()){
    avance()
  } else{
    gauche()
  }
]